// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Cell renders a normal cell 1`] = `
<table>
  <tbody>
    <tr>
      <TCell
        Field={
          Object {
            "Editable": true,
            "Name": "Name",
            "Primary": false,
            "Required": false,
            "Type": "Text",
          }
        }
        Row={
          Object {
            "BuiltInCategory": "INVALID",
            "Field1": "",
            "Field2": "",
            "Field3": "",
            "ID": 1,
            "Name": "A name",
            "PathName": "A path",
            "ReportType": "Schedule",
          }
        }
      >
        <td
          onClick={[Function]}
        >
          A name
        </td>
      </TCell>
    </tr>
  </tbody>
</table>
`;

exports[`Cell renders an empty cell if field is incorrect 1`] = `
<table>
  <tbody>
    <tr>
      <TCell
        Field={
          Object {
            "Editable": true,
            "Name": "Name Incorrect",
            "Primary": false,
            "Required": false,
            "Type": "Text",
          }
        }
        Row={
          Object {
            "BuiltInCategory": "INVALID",
            "Field1": "",
            "Field2": "",
            "Field3": "",
            "ID": 1,
            "Name": "A name",
            "PathName": "A path",
            "ReportType": "Schedule",
          }
        }
      >
        <td>
          -
        </td>
      </TCell>
    </tr>
  </tbody>
</table>
`;

exports[`Click over a cell non-editable - nothing 1`] = `
<table>
  <tbody>
    <tr>
      <TCell
        Field={
          Object {
            "Editable": false,
            "Name": "BuiltInCategory",
            "Primary": false,
            "Required": false,
            "Type": "Text",
          }
        }
        Row={
          Object {
            "BuiltInCategory": "INVALID",
            "Field1": "",
            "Field2": "",
            "Field3": "",
            "ID": 1,
            "Name": "A name",
            "PathName": "A path",
            "ReportType": "Schedule",
          }
        }
      >
        <td
          onClick={[Function]}
        >
          INVALID
        </td>
      </TCell>
    </tr>
  </tbody>
</table>
`;

exports[`Click over a primary cell - nothing 1`] = `
<table>
  <tbody>
    <tr>
      <TCell
        Field={
          Object {
            "Editable": true,
            "Name": "ID",
            "Primary": true,
            "Required": false,
            "Type": "Text",
          }
        }
        Row={
          Object {
            "BuiltInCategory": "INVALID",
            "Field1": "",
            "Field2": "",
            "Field3": "",
            "ID": 1,
            "Name": "A name",
            "PathName": "A path",
            "ReportType": "Schedule",
          }
        }
      >
        <td
          className="primary"
          onClick={[Function]}
        >
          <Input
            onBlur={[Function]}
            onEnter={[Function]}
            onEsc={[Function]}
            type="Text"
            value="1"
          >
            <input
              autoFocus={true}
              onBlur={[Function]}
              onChange={[Function]}
              onKeyUp={[Function]}
              type="Text"
              value="1"
            />
          </Input>
        </td>
      </TCell>
    </tr>
  </tbody>
</table>
`;

exports[`Click over cell renders an input 1`] = `
<table>
  <tbody>
    <tr>
      <TCell
        Field={
          Object {
            "Editable": true,
            "Name": "Name",
            "Primary": false,
            "Required": false,
            "Type": "Text",
          }
        }
        Row={
          Object {
            "BuiltInCategory": "INVALID",
            "Field1": "",
            "Field2": "",
            "Field3": "",
            "ID": 1,
            "Name": "A name",
            "PathName": "A path",
            "ReportType": "Schedule",
          }
        }
      >
        <td
          onClick={[Function]}
        >
          <Input
            onBlur={[Function]}
            onEnter={[Function]}
            onEsc={[Function]}
            type="Text"
            value="A name"
          >
            <input
              autoFocus={true}
              onBlur={[Function]}
              onChange={[Function]}
              onKeyUp={[Function]}
              type="Text"
              value="A name"
            />
          </Input>
        </td>
      </TCell>
    </tr>
  </tbody>
</table>
`;

exports[`Finish edit fires onEdit 1`] = `
<table>
  <tbody>
    <tr>
      <TCell
        Field={
          Object {
            "Editable": true,
            "Name": "BuiltInCategory",
            "Primary": false,
            "Required": false,
            "Type": "Text",
          }
        }
        Row={
          Object {
            "BuiltInCategory": "INVALID",
            "Field1": "",
            "Field2": "",
            "Field3": "",
            "ID": 1,
            "Name": "A name",
            "PathName": "A path",
            "ReportType": "Schedule",
          }
        }
        onEdit={[Function]}
      >
        <td
          className="dirty"
          onClick={[Function]}
        >
          modified value
        </td>
      </TCell>
    </tr>
  </tbody>
</table>
`;

exports[`Finish edit if Enter 1`] = `
<table>
  <tbody>
    <tr>
      <TCell
        Field={
          Object {
            "Editable": true,
            "Name": "BuiltInCategory",
            "Primary": false,
            "Required": false,
            "Type": "Text",
          }
        }
        Row={
          Object {
            "BuiltInCategory": "INVALID",
            "Field1": "",
            "Field2": "",
            "Field3": "",
            "ID": 1,
            "Name": "A name",
            "PathName": "A path",
            "ReportType": "Schedule",
          }
        }
      >
        <td
          className="dirty"
          onClick={[Function]}
        >
          modified value
        </td>
      </TCell>
    </tr>
  </tbody>
</table>
`;

exports[`Finish edit if blur 1`] = `
<table>
  <tbody>
    <tr>
      <TCell
        Field={
          Object {
            "Editable": true,
            "Name": "BuiltInCategory",
            "Primary": false,
            "Required": false,
            "Type": "Text",
          }
        }
        Row={
          Object {
            "BuiltInCategory": "INVALID",
            "Field1": "",
            "Field2": "",
            "Field3": "",
            "ID": 1,
            "Name": "A name",
            "PathName": "A path",
            "ReportType": "Schedule",
          }
        }
      >
        <td
          className="dirty"
          onClick={[Function]}
        >
          modified value
        </td>
      </TCell>
    </tr>
  </tbody>
</table>
`;
